# gert

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
gert/: __init__.py  __main__.py  cli.py  combiner.py  extractor.py  utils.py
